# petMessage

./: .coverage  pyproject.toml  test.py  tests.py
app/database/: models.py
app/repositories/: base.py  message.py
app/routers/: dependencies.py  web_router.py
app/services/: message_services.py
app/templates/: index.html
message_application/: .coverage
message_application/app/: __main__.py
message_application/app/database/: models.py  utils.py
message_application/app/repositories/: base.py  message.py
message_application/app/routers/: __init__.py  dependencies.py  web_router.py
message_application/app/schemas/: __init__.py  message_schemas.py
message_application/app/templates/: create.html  detail.html
message_application/tests/: conftest.py
message_application/tests/test_repositories/: test_message_repository.py
message_application/tests/test_services/: test_message_service.py
sqlalchemy/: sqlalchemy_core.py  sqlalchemy_learn.py
src/: __main__.py  calculator.py  main.py
src/database/: __init__.py  base.py  message.py  session.py
src/routers/: __init__.py  dependencies.py  message.py
src/schemas/: message.py
tests/: conftest.py  test_learning.py
tests/test_repositories/: test_message_repository.py
tests/test_services/: test_message_service.py
